# template-web-be-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.generated.md  README.md  cargo-generate.toml
api-error/: Cargo.toml
api-error-derive/: Cargo.toml
api-error-derive/src/: lib.rs
api-error/src/: lib.rs
hooks/: post-readme-swap.rhai
migration/: Cargo.toml  README.md
migration/src/: m20220101_000001_create_users_table.rs
scripts/: smoke-test-template.sh
src/: config.rs  errors.rs  main.rs  state.rs
src/api/: created.rs  mod.rs
src/api/users/: mod.rs  user.rs  users_endpoints.rs
src/bootstrap/: app.rs  database.rs  middleware.rs  mod.rs  observability.rs  server.rs
src/entities/: users.rs
src/store/: user_store.rs
src/tasks/: heartbeat.rs  mod.rs
